# vid2cat

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRODUCT_DESIGN_V2.md  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  picgo.config.json  pyproject.toml
.github/workflows/: docker.yml
scripts/: upload.js
src/vid2cat/: app.py  db.py  integrations.py  services.py  share_cards.py
src/vid2cat/static/: app.js  style.css
src/vid2cat/templates/: admin_dashboard.html  admin_login.html  admin_password.html  atlas_detail.html  atlas_list.html  index.html  login.html  my_cat.html  plaza.html  register.html
