[project]
name = "vid2cat"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "json-repair>=0.52.3",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[project.scripts]
vid2cat = "vid2cat:main"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"
